<package>
  <name>web_msgs</name>
  <version>1.0.7</version>
  <description>web_msgs</description>

  <license>BSD</license>

  <maintainer email="dave@cse.unr.edu">David Feil-Seifer</maintainer>
  <url type="website">http://ros.org/wiki/web_msgs</url>

  <author email="dash@clearpathrobotics.com">Devon Ash</author>
  <buildtool_depend>catkin</buildtool_depend>

</package>
